--- a/quote-generator/css/styles.css
+++ b/quote-generator/css/styles.css
@@ -1,3 +1,129 @@
 :root {
   /* variables goes here  */
+  --white: #ffffff;
+  --black: #000000;
+  --dark-clr: #333333;
+  --light-dark-clr: #828282;
+  --accent: 45, 86%, 77%;
+
+  --line-height: 1.5;
+
+  --body-fnt: 'Nunito', sans-serif;
+}
+
+/*=============================================
+=            General Resets           =
+=============================================*/
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+html {
+  font-size: 62.5%;
+
+}
+
+html,
+body {
+  height: 100%;
+	font-size: clamp(1rem, 0.5454545455rem + 2.2727272727vw, 1.1rem);
+  font-family: var(--body-fnt);
+  line-height: var(--line-height);
+  background: var(--white);
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+#__next {
+  isolation: isolate;
+}
+
+/*=============================================
+=            Utility Classes            =
+=============================================*/
+.flex { display: flex; }
+.items-center { align-items: center; }
+.flex-col { flex-direction: column; }
+.justify-between { justify-content: space-between; }
+.justify-center { justify-content: center; }
+.space-y-1 { gap: 1rem; }
+.space-y-2 { gap: 2rem; }
+.space-y-3 { gap: 3rem; }
+.cursor-pointer { cursor: pointer; }
+
+.container {
+  width: min(calc(80% - 2rem), 35rem);
+  margin-inline: auto;
+}
+
+
+/*=====  Quotes  ======*/
+.quote__text {
+  border-left: .3rem solid hsl(var(--accent));
+  padding-inline-start: 2rem;
+}
+.quote__text::before { content: open-quote; }
+.quote__text::after { content: close-quote; }
+
+.quote__info {
+  background: var(--dark-clr);
+  padding: 1rem;
+  margin-inline-start: 2rem;
+  transition: background 0.4s ease-in-out;
+}
+
+.quote__info:hover { background: var(--black) }
+
+.generate-quote {
+  position: absolute;
+  right: 5%;
+  top: 5%;
+}
+
+.generate-quote > span { cursor: pointer; }
+
+.quote__author {
+  font-size: 1.4rem;
+  color: var(--white);
+}
+
+.quote__category {
+  color: var(--light-dark-clr);
+  font-size: .9rem;
 }
